--- a/login.html
+++ b/login.html
@@ -3,15 +3,17 @@
     <head>
         <title>EnrollPoint Login</title>
         <link rel="stylesheet" type="text/css" href="login.css">
-    </head>
     <body>
         <h5>EnrollPoint</h5>
         <div class="loginbox">
             <form>
                 <p>User ID:</p>
+                <input type="text" name="">
                 <p>Password:</p>
+                <input type="password" name="">
                 <input type="submit" name="" value="Log In">
             </form>
         </div>
     </body>
+    </head>
 </html> 
