--- a/login.html
+++ b/login.html
@@ -5,7 +5,32 @@
         <link rel="stylesheet" type="text/css" href="login.css">
     <body>
         <h5>EnrollPoint</h5>
-        <div class="loginbox">
+        <table>
+            <tbody>
+                <tr>
+                    <th scope= "row">User ID: </th>
+                        <td><input type="text"/></td>
+                </tr>
+                <tr>
+                     <th scope = "row">Password: </th>
+                        <td><input type="text"/></td>
+                </tr>
+            
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td> <button type="button">Log In</button> </td>
+                </tr>
+            </tbody>
+        </table>
+     
+    </body>
+    </head>
+</html> 
+
+
+
+   <!-- <div class="loginbox">
             <form>
                 <p>User ID:</p>
                 <input type="text" name="">
@@ -13,7 +38,4 @@
                 <input type="password" name="">
                 <input type="submit" name="" value="Log In">
             </form>
-        </div>
-    </body>
-    </head>
-</html> 
+        </div> -->
