--- a/login.html
+++ b/login.html
@@ -7,18 +7,19 @@
     <body>
         <h5>EnrollPoint</h5>
         <div class="container">
-            <form class="login_form" method="POST">
-                <div class="font">User Id:</div><input type="text" name="">
+            <form class="login_form" method="POST" name="form" onsubmit="return validated()">
+                <div class="font">User Id:</div><input type="text" name="username">
                 <div id="username_error"> Username must be 8-32 characters!</div>
 
                 <div class="font font2">Password:</div>
-                <input type="password" name="">
+                <input type="password" name="password">
                 <div id="password_error"> Password must be 8-16 characters!</div>
 
 
                 <button type="submit">Log In</button>
             </form>
         </div>
+        <script src="validation.js"></script>
         
     </body>
     </head>
